bk_ida/gccida/c3/build_common_tree_nodes_2
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5353:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5358:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 11) = ( splay_tree_value)build_int_2_wide( 0LL, 0LL); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5359:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 12) = ( splay_tree_value)build_int_2_wide( 1uLL, 0LL); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5360:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 13) = ( splay_tree_value)build_int_2_wide( 0xFFFFFFFFFFFFFFFFLL, -1LL); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5361:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 15) = ( splay_tree_value)size_int_wide( 0LL, SIZETYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5362:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 16) = ( splay_tree_value)size_int_wide( 1LL, SIZETYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5363:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 17) = ( splay_tree_value)size_int_wide( 0LL, BITSIZETYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5364:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 18) = ( splay_tree_value)size_int_wide( 1LL, BITSIZETYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5365:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 19) = ( splay_tree_value)size_int_wide( 8LL, BITSIZETYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5366:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 27) = ( splay_tree_value)make_node( VOID_TYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5370:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 14) = ( splay_tree_value)build_int_2_wide( 0LL, 0LL); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5373:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 28) = ( splay_tree_value)build_pointer_type( ( tree)*( &global_trees + 27)); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5375:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 29) = ( splay_tree_value)build_pointer_type( v1); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5376:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 24) = ( splay_tree_value)make_node( REAL_TYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5379:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 25) = ( splay_tree_value)make_node( REAL_TYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5386:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 26) = ( splay_tree_value)make_node( REAL_TYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5392:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 20) = ( splay_tree_value)make_node( COMPLEX_TYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5395:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 21) = ( splay_tree_value)make_node( COMPLEX_TYPE); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/tree.c:5398:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 22) = ( splay_tree_value)make_node( COMPLEX_TYPE); 
                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes_2/src/obj/tree.o] Error 1
